*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.23 ===
* Implemented IInSequence::sink() method for writing all content to another IOutSequence.
* Updated build scripts.

=== 1.0.22 ===
* Implemented system::page_size() and system::system_cores() functions.
* Extended ipc::SharedMem interface.
* Implemented UUID generation and formatting header.
* Updated module versions in dependencies.

=== 1.0.21 ===
* Fixed reading of 32-bit FLOAT WAV files that do not contain fact chunk on Windows.
* Implemented min(), max(), rms() and avg() builtin functions for expression language.
* Implemented io::Path::final_path method for obtaining the final file system object
  the abstract path points to.
* Implemented ipc::SharedMem primitive for organizing shared memory segments.
* Implemented ipc::SharedMutex primitive for organizing global inter-process mutexes.
* Implementeation of ipc::Mutex moved to critical section for Windows.
* Updated module versions in dependencies.

=== 1.0.20 ===
* More detailed MIDI specification (added MIDI_CHANNELS constant).
* Additional methods for converting between UTF-8, UTF-16 and UTF-32.
* Added support of real-time nesting of ipc::IExecutor.
* Added support of custom functions in the expression language.
* Enhanced JSON serializer interface with new functions.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.19 ===
* Optimized expression variables access.
* Many code updates that could cause potential problems related to using another
  decimal point for floating-point number formatting.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.18 ===
* Updated module versions in dependencies.

=== 1.0.17 ===
* Fixed several issues reported by PVS Studio static analyzer.
* Fixed invalid memory read on OSC protocol pattern matching.